[v9r2p8]
use DIRAC v6r20p16

* correct code style
* simplify the list checking
* fix size per lumi
* fix printout
* register runs to the productionoutputfiles

[v9r2p7]
use DIRAC v6r20p14

* using DMSHelpers for getting the storage elements list
* deleted empty folders
* restored test of voboxes

[v9r2p6]
use DIRAC v6r20p13

* use default values for get-stats without trying to guess
* Allow archive SEs as source
* Protect against run having no destination
* add protections against runs already defined, allow SDST files
* add bookkeeping downtime instructions
* subrequest does not have production details

[v9r2p5]
use DIRAC v6r20p12

* MC redecay production should use the fixed number of events
* check files processed without descendants is due to BAD DQ flag
* cPickling
* refix
* fix
* avoid calling online runDB until the SSO problem is solved
* remove misleading printout

[v9r2p4]
use DIRAC v6r20p11

* RSS: FreeDiskSpace fixed to use only srm endpoints

[v9r2p3]
use DIRAC v6r20p11

* dirac-architecture script will send a mail when no suitable DIRAC platform is found
* taking number of processors allocated to the job from MJF
* removed useless check of SoftwareDistribution section
* TS: allow to set empty list as SE parameters
* restored tests
* fix wrong query

[v9r2p2]
* TransformationDebug: use FTS3Cient
* corrected comparison of input/output file types
* removed unused wf parameter
* Few fixes for MC ReDecay requests 1. Ban list of sites (BOINC for example) 2. Limit number of events in MC simulation
* fix for GDB invocation
* CI: some fixes for test job input files
* CI: corrected totally wrong step
* CI: host and port, not username and pwd...

[v9r2p1]
use DIRAC v6r20p7

* fix for Workflow/ModuleBase

[v9r2]
use DIRAC v6r20p7

* delete pilot syncronizer, because it is in DIRAC
* set PYCURL_SSL_LIBRARY
* handle correctly the case when some parameter is missing
* correct the file path
* added try/except for incomplete requests
* fix for NoneType