@@ -7,6 +7,14 @@ Sources
 
 Releases
 {
+
+  v9r2p9
+  {
+    Modules = LHCbDIRAC:v9r2p9, LHCbWebDIRAC:v4r4p9
+    Depends = DIRAC:v6r20p18
+    LcgVer = v14r2
+  }
+
   v9r2p8
   {
     Modules = LHCbDIRAC:v9r2p8, LHCbWebDIRAC:v4r4p8
