@@ -1,3 +1,9 @@
+[v9r2p9]
+use DIRAC v6r20p18
+
+* revert fts3 undue changes
+* Add information on IDR errors
+
 [v9r2p8]
 use DIRAC v6r20p16
 
